--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sealsystems/seal-streamparser.git"
+    "url": "https://github.com/sealsystems/rainbow.git"
   }
 }
