--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -4,6 +4,9 @@ update_configs:
   - package_manager: "docker"
     directory: "/"
     update_schedule: "weekly"
+    commit_message:
+      prefix: "chore"
+      include_scope: true
     # default_reviewers:
     #   - "com-se"
   # Update package.json
@@ -11,6 +14,9 @@ update_configs:
     directory: "/"
     update_schedule: "live"
     version_requirement_updates: "increase_versions"
+    commit_message:
+      prefix: "chore"
+      include_scope: true
     # default_reviewers:
     #   - "com-se"
     allowed_updates:
